k8s/04-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-api
  namespace: banking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: banking-api
  template:
    metadata:
      labels:
        app: banking-api
    spec:
      containers:
        - name: banking-api
          image: fatma15/banking-api:v1.0
          ports:
            - containerPort: 3000
