k8s/05-dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-dashboard
  namespace: banking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
        - name: dashboard
          image: fatma15/banking-dashboard:v1.1
          ports:
            - containerPort: 80
